Fix dollar alignment in tip modal

--- a/ui/scss/component/_modal.scss
+++ b/ui/scss/component/_modal.scss
@@ -261,3 +261,10 @@
     margin-bottom: 0;
   }
 }
+
+.modal--send-tip {
+  svg.icon--DollarSign {
+    width: 16px;
+    height: 16px;
+  }
+}
